test/golden96/{TrueCLd}.12627313193367841398.golden
INITIALPATH:7:22: error: [GHC-39999]
    • No instance for ‘Integral Bool’ arising from a use of ‘formatAnyIntegral’
    • In the first argument of ‘putStrLn’, namely ‘(formatAnyIntegral Decimal Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing True)’
      In the expression: putStrLn (formatAnyIntegral Decimal Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing True)
      In an equation for ‘main’: main = putStrLn (formatAnyIntegral Decimal Minus (Nothing :: Maybe (Int, AnyAlign, Char)) Nothing True)
  |
7 | main = putStrLn [fmt|{True:d}|]
  |                      ^^^^^^^^^^